Check for some cases that produce empty lists.

--- a/master.cfg
+++ b/master.cfg
@@ -19,8 +19,8 @@ from rosdistro import get_index
 
 # BuildMasterConfig
 c = BuildmasterConfig = {}
-c['title'] = 'Buildbot-ROS'
-c['titleURL'] = 'http://github.com/mikeferguson/buildbot-ros'
+c['title'] = 'Buildbot at the Personal Robotics Lab'
+c['titleURL'] = 'https://buildbot.personalrobotics.ri.cmu.edu'
 c['buildbotURL'] = "http://localhost:8010/"
 c['builders'] = []
 c['change_source'] = []
@@ -48,13 +48,14 @@ c['status'] = []
 c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg))
 
 # Build Machines
-c['slaves'] = [BuildSlave('rosbuilder1', 'mebuildslotsaros'),
-               BuildSlave('rosbuilder2', 'mebuildslotsaros')]
+# TODO: Change the password from 'mebuildlotsaros'.
+c['slaves'] = [ BuildSlave('cortana', 'mebuildlotsaros', max_builds=2) ]
 c['slavePortnum'] = 9989
-BUILDERS = ['rosbuilder1', 'rosbuilder2']
+BUILDERS = [ 'cortana' ]
 
 # RosDistro Stuff
-rosindex = get_index('https://raw.github.com/mikeferguson/rosdistro-buildbot-example/with-apache/index.yaml')
+#rosindex = get_index('https://raw.github.com/mikeferguson/rosdistro-buildbot-example/with-apache/index.yaml')
+rosindex = get_index('http://localhost:4001/rosdistro/index.yaml')
 dist_names = rosindex.distributions.keys()
 oracle = RosDistroOracle(rosindex, dist_names)
 
@@ -87,7 +88,9 @@ for dist in dist_names:
                     nightlyDebNames.append(oracle.getNightlyDebStart(dist)+'_'+dist+'_'+code_name+'_'+arch+'_debbuild')
 
     # get name of first nightly docbuilds for this distro
-    nightlyDocNames.append(oracle.getNightlyDocStart(dist)+'_'+dist+'_docbuild')
+    nightly_doc_start = oracle.getNightlyDocStart(dist)
+    if nightly_doc_start is not None:
+        nightlyDocNames.append(nightly_doc_start+'_'+dist+'_docbuild')
     print('')
 
 # Build debs at 2AM
