Only create empty_build if necessary.

--- a/master.cfg
+++ b/master.cfg
@@ -78,14 +78,6 @@ rosindex = rosdistro.get_index(local_rosdistro_url)
 dist_names = rosindex.distributions.keys()
 oracle = RosDistroOracle(rosindex, dist_names)
 
-# Create a bogus job.
-from buildbot.config import BuilderConfig
-from buildbot.process.factory import BuildFactory
-from buildbot.steps.shell import ShellCommand
-factory = BuildFactory()
-factory.addStep(ShellCommand(command=['echo', 'hello', 'world']))
-c['builders'].append(BuilderConfig(name='empty_build', slavenames=['cortana'], factory=factory))
-
 # Setup jobs
 DEB_JOBS = list()
 TEST_JOBS = list()
@@ -145,10 +137,27 @@ c['schedulers'].append(
     )
 )
 
-c['schedulers'].append(
-    forcesched.ForceScheduler(
-        name='force',
-        builderNames=DEB_JOBS+TEST_JOBS+DOC_JOBS+LPD_JOBS+['empty_build']
+# Create a bogus job. At least one job is necessary for Buildbot to start.
+if not c['builders']:
+    from buildbot.config import BuilderConfig
+    from buildbot.process.factory import BuildFactory
+    from buildbot.steps.shell import ShellCommand
+    factory = BuildFactory()
+    factory.addStep(ShellCommand(command=['echo', 'hello', 'world']))
+    c['builders'].append(BuilderConfig(name='empty_build', slavenames=['cortana'], factory=factory))
+
+    c['schedulers'].append(
+        forcesched.ForceScheduler(
+            name='force',
+            builderNames=[ 'empty_build' ],
+        )
     )
-)
+
+else:
+    c['schedulers'].append(
+        forcesched.ForceScheduler(
+            name='force',
+            builderNames=DEB_JOBS+TEST_JOBS+DOC_JOBS+LPD_JOBS
+        )
+    )
 
