Changed to hudson buildserver.

--- a/master.cfg
+++ b/master.cfg
@@ -49,9 +49,10 @@ c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg))
 
 # Build Machines
 # TODO: Generate this configuration from Puppet.
-c['slaves'] = [ BuildSlave('cortana', external_config['buildslave_pass'], max_builds=2) ]
+#BuildSlave('cortana', external_config['buildslave_pass'], max_builds=2),
+c['slaves'] = [ BuildSlave('hudson', external_config['buildslave_pass'], max_builds=4), ]
 c['slavePortnum'] = external_config['buildslave_port']
-BUILDERS = [ 'cortana' ]
+BUILDERS = [ 'hudson' ]
 
 # Locally clone the rosdistro file to bypass authentication.
 import tempfile, os, subprocess
@@ -115,27 +116,27 @@ for dist in dist_names:
         nightlyDocNames.append(nightly_doc_start+'_'+dist+'_docbuild')
     print('')
 
-# Build debs at 2AM
-c['schedulers'].append(
-    timed.Nightly(
-        name = 'nightly-debbuild',
-        branch = 'master',
-        builderNames = nightlyDebNames,
-        hour=2,
-        minute=0
-    )
-)
-
-# Build debs at 5AM
-c['schedulers'].append(
-    timed.Nightly(
-        name = 'nightly-docbuild',
-        branch = 'master',
-        builderNames = nightlyDocNames,
-        hour=5,
-        minute=0
-    )
-)
+## Build debs at 2AM
+#c['schedulers'].append(
+#    timed.Nightly(
+#        name = 'nightly-debbuild',
+#        branch = 'master',
+#        builderNames = nightlyDebNames,
+#        hour=2,
+#        minute=0
+#    )
+#)
+#
+## Build debs at 5AM
+#c['schedulers'].append(
+#    timed.Nightly(
+#        name = 'nightly-docbuild',
+#        branch = 'master',
+#        builderNames = nightlyDocNames,
+#        hour=5,
+#        minute=0
+#    )
+#)
 
 # Create a bogus job. At least one job is necessary for Buildbot to start.
 if not c['builders']:
@@ -144,7 +145,7 @@ if not c['builders']:
     from buildbot.steps.shell import ShellCommand
     factory = BuildFactory()
     factory.addStep(ShellCommand(command=['echo', 'hello', 'world']))
-    c['builders'].append(BuilderConfig(name='empty_build', slavenames=['cortana'], factory=factory))
+    c['builders'].append(BuilderConfig(name='empty_build', slavenames=['hudson'], factory=factory))
 
     c['schedulers'].append(
         forcesched.ForceScheduler(
